Change About Us to Our Mission in nav and fix main title on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -94,6 +94,7 @@
     #main-title {
         line-height: 11vw;
         margin-top: 10px;
+        width: auto;
     }
     
     #main-subtitle {
